[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-confession-bot"
version = "1.0.0"
description = "Anonymous Telegram confession bot with comment system"
authors = [{name = "Bot Developer"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
    "flask>=2.3.0",
    "pytz>=2023.3",
    "nltk>=3.8",
    "textblob>=0.17.1", 
    "profanity-check>=1.0.3",
    "langdetect>=1.0.9",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "validators>=0.20.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "schedule>=1.2.0"
]

[project.scripts]
start-bot = "main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
